MK edit FindByPriceActivity.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activity.SplashScreen">
-            <intent-filter>
+
+        <activity android:name=".activity.FindByPriceActivity"></activity>
+        <activity android:name=".activity.OnBoradingActivity"></activity>
+        <activity android:name=".activity.SplashScreen">  <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter></activity>
-        <activity android:name=".activity.FindActivity" />
-        <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.OnBoradingActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
