--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
 }
