--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
+    implementation 'com.synnapps:carouselview:0.1.4'
 }
