--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.FindByPriceActivity" />
+        <activity android:name=".activity.FindActivity" />
         <activity android:name=".activity.OnBoradingActivity" />
         <activity android:name=".activity.SplashScreen">
             <intent-filter>
